# chess-game

./: .gitattributes  .gitignore  ARCHITECTURE.md  Bishop.cpp  Bishop.h  Board.cpp  Board.h  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Constants.h  Enums.h  Game.cpp  Game.h  GameHistory.cpp  GameHistory.h  INSTALLATION.md  King.cpp  King.h  Knight.cpp  Knight.h  LICENSE  Move.h  Pawn.cpp  Pawn.h  Piece.cpp  Piece.h  Pieces.h  Position.h  QUICKSTART.md  Queen.cpp  Queen.h  README.md  Rook.cpp  Rook.h  Schack.vcxproj  Schack.vcxproj.filters  TODO.md  build_and_run.ps1  (+6 more)
.github/workflows/: build.yml
assets/: ChessPieceGenerator.cs  EnhancedChessPieceGenerator.cs  README.md
